# postways-v2

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
apps/diary/: admin.py  apps.py  consumers.py  forms.py  middleware.py  models.py  permissions.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  validators.py  views.py
apps/diary/management/commands/: seed_demo_data.py  wait_for_db.py
apps/diary/migrations/: 0001_initial.py  0002_add_username_changed_at.py  0003_add_email_change_fields.py  0004_add_related_names_and_fix_image_max_length.py  0005_alter_like_options_alter_post_options_and_more.py
apps/diary/static/diary/: fetch.js  style.css
apps/diary/templates/diary/: _post_card.html  add-post.html  (+9 more)
apps/diary/templatetags/: diary_tags.py
apps/diary/tests/: conftest.py  test_auth_api.py  test_auth_views.py  test_email_api.py  test_fixture.py  test_forms.py  test_home_views.py  test_jwttoken_api.py  test_like_api.py  test_models.py  test_password_api.py  test_post_api.py  test_serializers.py  test_user_api.py  test_username_api.py
apps/diary/tests_new/: test_root_api.py
apps/diary/views/: __init__.py  api.py  html.py
config/: __init__.py  asgi.py  celery.py  env.dev.example  env.example  env.prod.example  settings.py  urls.py  wsgi.py
docker/: .dockerignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml
docker/nginx/: nginx.conf
docs/: DEPLOYMENT.md  RUNBOOK_PROD.md  api-documentation-guide.md  browser-caching-plan.md  endpoints-reference.md  postman-postapiview-docs.md  recommendations-2026-01-17.md  user-paths-scenarios.md
templates/: 400.html  403.html  404.html  500.html
templates/admin/: base.html
templates/registration/: email_change.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html  username_change.html
templates/rest_framework/: api.html
(+1 files in other folders)
