[project]
name = "postways-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.10",
    "django-environ>=0.12.0",
    "pillow>=12.1.0",
    "psycopg[binary]>=3.3, <4.0",
    "redis>=5.2.0,<6.0.0",
    "djangorestframework>=3.15, <3.16",
    "djangorestframework-simplejwt>=5.5.1",
    "channels[daphne]>=4.0,<5.0",
    "channels-redis>=4.2,<5.0",
    "django-filter>=25.2",
    "celery>=5.5,<6.0",
]

[dependency-groups]
dev = [
    "faker>=40.1.2",
    "pytest>=9.0.2",
    "pytest-django>=4.11.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "*/migrations/*",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "DJ",     # flake8-django
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django"]
